Cut more details from exps

--- a/main.tex
+++ b/main.tex
@@ -745,23 +745,11 @@
 	\end{itemize}
 \end{frame}
 
-\begin{frame}
-	\frametitle{MLEs for SNAP datasets}
-	\begin{itemize}
-		\item SNAP datasets
-		\item Fit: coupled $\PYP$, uncoupled $\PYP$ and $\Geom(\beta)$ arrivals
-	\end{itemize}
-\end{frame}
 
 \begin{frame}
-	\frametitle{MLEs for SNAP datasets}
+	\frametitle{MLEs for real data}
 	Ask Ubuntu
 	\begin{itemize}
-		\item Estimates of $\PYP$ parameters vary significantly between coupled and uncoupled
-		\begin{itemize}
-			\item $\hat{\theta}, \hat{\alpha} = 18080, 0.25$
-			\item $\hat{\theta}, \hat{\alpha}, \hat{\tau} = -0.99, -2.54, 0.99$
-		\end{itemize}
 		\item Edge exchangeable models misspecified
 		\item Non-exchangeable BNTL provide better fit
 	\end{itemize}
