--- a/main.tex
+++ b/main.tex
@@ -412,24 +412,41 @@
 
 
 \begin{frame}
-	\frametitle{Models}
-	\includegraphics[angle=90,origin=c,scale=0.4]{fig/models1}
+	\frametitle{Generative models for network data}
+	\begin{center}
+	\resizebox{\textwidth}{!}{
+	  \only<1-4>{
+		\input{fig/models}
+	  }
+	  % \begin{tabular}{c | c}
+	  % 	Dense & Sparse \\
+	  % 	\hline 
+	  % 	& \\
+	  % 	\input{fig/vtx-exch} & \input{fig/sparse-models}
+	  % \end{tabular}
+	}
+	\end{center}
 \end{frame}
 
-\begin{frame}
-	\frametitle{Models}
-	\includegraphics[angle=90,origin=c,scale=0.4]{fig/models2}
-\end{frame}
+% \begin{frame}
+% 	\frametitle{Models}
+% 	\includegraphics[angle=90,origin=c,scale=0.4]{fig/models1}
+% \end{frame}
 
-\begin{frame}
-	\frametitle{Models}
-	\includegraphics[angle=90,origin=c,scale=0.4]{fig/models3}
-\end{frame}
+% \begin{frame}
+% 	\frametitle{Models}
+% 	\includegraphics[angle=90,origin=c,scale=0.4]{fig/models2}
+% \end{frame}
 
-\begin{frame}
-	\frametitle{Models}
-	\includegraphics[angle=90,origin=c,scale=0.4]{fig/models4}
-\end{frame}
+% \begin{frame}
+% 	\frametitle{Models}
+% 	\includegraphics[angle=90,origin=c,scale=0.4]{fig/models3}
+% \end{frame}
+
+% \begin{frame}
+% 	\frametitle{Models}
+% 	\includegraphics[angle=90,origin=c,scale=0.4]{fig/models4}
+% \end{frame}
 
 \begin{frame}
 	\frametitle{Edge exchangeable models \cite{cai2016}, \cite{CraneDempsey2017}}
